fixed cropped imgs

--- a/app/globals.css
+++ b/app/globals.css
@@ -183,7 +183,7 @@ body {
   .wings {
     position: absolute;
     z-index: 5;
-    top: 130px;
+    top: 190px;
     left: 130px;
   }
 
@@ -259,32 +259,31 @@ body {
 
   .searchBar1 {
     position: absolute;
-    top: 45px;
-    right: 25px;
+    top: 172px;
+    right: 70px;
     z-index: 3;
     height: auto;
   }
 
   .textBox1 {
     position: absolute;
-    top: 5px;
+    top: 210px;
     right: 40px;
     z-index: 4;
     height: auto;
-    
   }
 
   .searchBar2 {
     position: absolute;
-    top: 168px;
-    right: -15px;
+    bottom: 75px;
+    right: 30px;
     z-index: 5;
     height: auto;
   }
 
   .textBox2 {
     position: absolute;
-    top: 135px;
+    bottom: -5px;
     right: 0px;
     z-index: 6;
     height: auto;
